[package]
name = "rusty"
version = "0.1.0"
authors = ["Maxime Rauer <maxime.rauer@proton.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking"] }
serde_json = "1.0"
